--- a/.gitignore
+++ b/.gitignore
@@ -129,9 +129,10 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-/log
+/log/*
 /view/html_tpl/
 .idea/
+/uploads/*
 
 # FOR Gruntjs
 #
